--- a/Amptron/Platforms/iOS/Info.plist
+++ b/Amptron/Platforms/iOS/Info.plist
@@ -30,7 +30,11 @@
 	<string>Assets.xcassets/appicon.appiconset</string>
 	<key>NSBluetoothAlwaysUsageDescription</key>
 	<string>Amptron needs permission to access Bluetooth</string>
-	<key>Custom Property</key>
-	<string></string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Amptron requires geolocation to improve the quality of the service</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Amptron requires geolocation to improve the quality of the service</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>App requires geolocation to improve the quality of the service</string>
 </dict>
 </plist>
